deploy/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openapi-map
  namespace: openapi-map
  labels:
    app: openapi-map
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openapi-map
  template:
    metadata:
      name: openapi-map
      labels:
        app: openapi-map
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      serviceAccountName: openapi-map
      containers:
      - name: openapi-map
        image: mejlholm/openapi-map:0.0.79
        resources:
          limits:
            memory: "256Mi"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
