deploy/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: openapi-map
  namespace: openapi-map
spec:
  selector:
    app: openapi-map
  ports:
    - name: default
      port: 8080
      protocol: TCP
      targetPort: 8080
