deploy/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: openapi-map
  namespace: openapi-map
spec:
  rules:
  - host: openapi-map.mejlholm.org
    http:
      paths:
      - path: /
        backend:
          serviceName: openapi-map
          servicePort: 8080
